<resources>
    <string name="app_name">Mad Level 1 Task 2</string>
    <string name="conjuction">Conjuction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_and_b">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="submit">Submit</string>
    <string name="empty">Please fill in all input fields.</string>
    <string name="zero">0 correct answers, please try again.</string>
    <string name="one">1 correct answer, keep trying!</string>
    <string name="two">2 correct answers, keep trying!</string>
    <string name="three">3 correct answers, keep trying!</string>
    <string name="four">Congratulations, all answers are correct!</string>
</resources>